Added CRUD for products
