# docs/swagger.yaml
@@ -1,31 +1,22 @@
 definitions:
-  database.Category:
+  dto.CreateUpdateProductRequest:
     properties:
-      id:
+      category_id:
         type: integer
-      name:
-        type: string
-    type: object
-  database.Product:
-    properties:
-      category:
-        $ref: '#/definitions/database.Category'
-      categoryID:
-        type: integer
-      createdAt:
-        type: string
       description:
         type: string
-      id:
-        type: integer
-      imageUrl:
+      image_url:
         type: string
       name:
         type: string
       price:
-        type: integer
+        type: number
+    required:
+    - category_id
+    - name
+    - price
     type: object
-  services.LoginRequest:
+  dto.LoginRequest:
     properties:
       password:
         minLength: 8
@@ -36,26 +27,46 @@ definitions:
     - password
     - username
     type: object
-  services.LoginResponse:
+  dto.LoginResponse:
     properties:
       token:
         type: string
     type: object
-  services.RegisterRequest:
+  dto.ProductResponse:
+    properties:
+      category_id:
+        type: integer
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      image_url:
+        type: string
+      name:
+        type: string
+      price:
+        type: number
+    type: object
+  dto.RegisterRequest:
     properties:
       email:
         type: string
       password:
         minLength: 8
         type: string
+      type:
+        type: string
       username:
         type: string
     required:
     - email
     - password
+    - type
     - username
     type: object
-  services.RegisterResponse:
+  dto.RegisterResponse:
     properties:
       email:
         type: string
@@ -81,14 +92,14 @@ paths:
         name: credentials
         required: true
         schema:
-          $ref: '#/definitions/services.LoginRequest'
+          $ref: '#/definitions/dto.LoginRequest'
       produces:
       - application/json
       responses:
         "200":
           description: JWT token
           schema:
-            $ref: '#/definitions/services.LoginResponse'
+            $ref: '#/definitions/dto.LoginResponse'
         "400":
           description: Invalid input (validation error)
           schema:
@@ -121,14 +132,14 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/services.RegisterRequest'
+          $ref: '#/definitions/dto.RegisterRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created user
           schema:
-            $ref: '#/definitions/services.RegisterResponse'
+            $ref: '#/definitions/dto.RegisterResponse'
         "400":
           description: Invalid input (validation error)
           schema:
@@ -156,8 +167,47 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/database.Product'
+              $ref: '#/definitions/dto.ProductResponse'
             type: array
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Returns all products
+      tags:
+      - Products
+    post:
+      consumes:
+      - application/json
+      description: Creates product and returns one
+      parameters:
+      - description: Data for create product
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUpdateProductRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.ProductResponse'
+        "400":
+          description: Bad request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
         "401":
           description: Unauthorized
           schema:
@@ -172,7 +222,136 @@ paths:
             type: object
       security:
       - ApiKeyAuth: []
-      summary: Returns all products
+      summary: Creates product
+      tags:
+      - Products
+  /api/v1/products/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes existing product
+      parameters:
+      - description: Product Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Deletes existing product
+      tags:
+      - Products
+    get:
+      consumes:
+      - application/json
+      description: Returns product by its id
+      parameters:
+      - description: Product Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ProductResponse'
+        "400":
+          description: Bad request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Returns product by id
+      tags:
+      - Products
+    put:
+      consumes:
+      - application/json
+      description: Updates existing product and returns one
+      parameters:
+      - description: Product Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Data for update existing product
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUpdateProductRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ProductResponse'
+        "400":
+          description: Bad request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Updates existing product
       tags:
       - Products
 securityDefinitions:
