# internal/dto/product.go
@@ -1,0 +1,21 @@
+package dto
+
+import "time"
+
+type CreateUpdateProductRequest struct {
+	Name        string  `json:"name" binding:"required"`
+	Description string  `json:"description"`
+	Price       float64 `json:"price" binding:"required,gt=0"`
+	ImageUrl    string  `json:"image_url"`
+	CategoryID  uint    `json:"category_id" binding:"required,gt=0"`
+}
+
+type ProductResponse struct {
+	Id          uint      `json:"id"`
+	Name        string    `json:"name"`
+	Description string    `json:"description"`
+	Price       float64   `json:"price"`
+	ImageUrl    string    `json:"image_url"`
+	CategoryID  uint      `json:"category_id"`
+	CreatedAt   time.Time `json:"created_at"`
+}
